; ModuleID = '/home/carl/AnghaBench/xLua/build/luasocket/extr_select.c_getfd.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luasocket/extr_select.c_getfd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SOCKET_INVALID = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"getfd\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @getfd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @getfd(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca double, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32, i32* @SOCKET_INVALID, align 4
  store i32 %5, i32* %3, align 4
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @lua_pushstring(i32* %6, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @lua_gettable(i32* %8, i32 -2)
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @lua_isnil(i32* %10, i32 -1)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %34, label %13

13:                                               ; preds = %1
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @lua_pushvalue(i32* %14, i32 -2)
  %16 = load i32*, i32** %2, align 8
  %17 = call i32 @lua_call(i32* %16, i32 1, i32 1)
  %18 = load i32*, i32** %2, align 8
  %19 = call i64 @lua_isnumber(i32* %18, i32 -1)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %33

21:                                               ; preds = %13
  %22 = load i32*, i32** %2, align 8
  %23 = call double @lua_tonumber(i32* %22, i32 -1)
  store double %23, double* %4, align 8
  %24 = load double, double* %4, align 8
  %25 = fcmp oge double %24, 0.000000e+00
  br i1 %25, label %26, label %29

26:                                               ; preds = %21
  %27 = load double, double* %4, align 8
  %28 = fptosi double %27 to i32
  br label %31

29:                                               ; preds = %21
  %30 = load i32, i32* @SOCKET_INVALID, align 4
  br label %31

31:                                               ; preds = %29, %26
  %32 = phi i32 [ %28, %26 ], [ %30, %29 ]
  store i32 %32, i32* %3, align 4
  br label %33

33:                                               ; preds = %31, %13
  br label %34

34:                                               ; preds = %33, %1
  %35 = load i32*, i32** %2, align 8
  %36 = call i32 @lua_pop(i32* %35, i32 1)
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i32 @lua_pushstring(i32*, i8*) #1

declare dso_local i32 @lua_gettable(i32*, i32) #1

declare dso_local i32 @lua_isnil(i32*, i32) #1

declare dso_local i32 @lua_pushvalue(i32*, i32) #1

declare dso_local i32 @lua_call(i32*, i32, i32) #1

declare dso_local i64 @lua_isnumber(i32*, i32) #1

declare dso_local double @lua_tonumber(i32*, i32) #1

declare dso_local i32 @lua_pop(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
